Fix Docker Build & Test job: add load parameter to make image available locally
- Added 'load: true' to docker/build-push-action to ensure the built image is available in local Docker daemon
- This fixes the 'Unable to find image newsbalancer:test locally' error in the Test Docker image step
- The Docker build was completing successfully but the image wasn't loaded for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -304,6 +304,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: newsbalancer:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
