Fix Docker Build & Test: use correct Dockerfile.app for Go application
- Changed from default Dockerfile (Playwright tests) to Dockerfile.app (Go application)
- Set target to 'debug' stage which includes curl for health checks
- This should resolve the connection refused error as the Go application will now properly start on port 8080

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,6 +303,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile.app
+          target: debug
           push: false
           load: true
           tags: newsbalancer:test
