Fix Docker build: Add templates directory to git tracking
Root cause: The templates directory contained .html files which were ignored by the *.html pattern in .gitignore. This caused the templates directory to not be tracked by git, so it wasn't available in the GitHub Actions checkout, leading to Docker build failures.

Changes:
- Modified .gitignore to exclude templates/**/*.html from the *.html ignore pattern
- Added all template files to git tracking
- Removed debug code from Dockerfile.app

This resolves the 'templates: not found' error in CI/CD Docker builds.

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ news.db-wal
 # Coverage & Test Reports (extending existing)
 # *.out is already covered above
 *.html
+!templates/**/*.html
 # /test-results/ is already covered above
 # /playwright-report/ is already covered above
 
