Fix Docker container file permission issues
- Modified log file path to use /tmp in Docker/test environments
- Added fallback to stdout if log file creation fails in test mode
- Added DOCKER environment variable to Docker test
- Enhanced database error logging with more context
- This should resolve permission issues with non-root user (65534:65534) in Docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -335,6 +335,7 @@ jobs:
           docker run --rm --name newsbalancer-test -p 8080:8080 \
             -e PORT=8080 \
             -e TEST_MODE=true \
+            -e DOCKER=true \
             -e DB_CONNECTION=":memory:" \
             -e NO_AUTO_ANALYZE=true \
             -e LLM_API_KEY="${{ secrets.LLM_API_KEY || 'test-key-for-docker' }}" \
