Fix Docker container ENTRYPOINT issue
- Remove Docker inspection commands that trigger application startup
- The ENTRYPOINT ['/newsbalancer'] in Dockerfile.app causes every docker run command to start the application
- Even 'docker run newsbalancer:test ls -la /' runs the newsbalancer binary first
- This was causing permission denied errors before environment variables were set
- Focus on actual health check test with proper environment variables

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -313,13 +313,8 @@ jobs:
 
       - name: Test Docker image
         run: |
-          # First, inspect what's in the image
-          echo "=== Inspecting Docker image contents ==="
-          docker run --rm newsbalancer:test ls -la /
-          echo "=== Checking configs directory ==="
-          docker run --rm newsbalancer:test ls -la /configs || echo "No configs directory"
-          echo "=== Checking templates directory ==="
-          docker run --rm newsbalancer:test ls -la /templates || echo "No templates directory"
+          # Skip inspection commands as they trigger the application due to ENTRYPOINT
+          echo "=== Starting Docker container tests ==="
 
           # Test the health check flag first
           echo "=== Testing health check flag ==="
