Enable performance benchmarks on frontend-rewrite-v3 branch
- Modified benchmark job condition to run on both main and frontend-rewrite-v3 branches
- Added docker job as dependency to ensure Docker tests pass before benchmarks
- This allows testing benchmark functionality before merging to main
- Comprehensive performance testing with 20 concurrent users, 50 requests per user
- Tests multiple endpoints: articles list, specific article, bias analysis, ensemble data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -369,12 +369,12 @@ jobs:
 
           docker stop newsbalancer-test || true
 
-  # Performance benchmarks (only on main branch)
+  # Performance benchmarks (on main branch and frontend-rewrite-v3 for testing)
   benchmark:
     name: Performance Benchmarks
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    needs: [integration]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/frontend-rewrite-v3'
+    needs: [integration, docker]
 
     steps:
       - name: Checkout code
