--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -30,6 +30,11 @@ jobs:
       run: |
         sqlite3 "$DATABASE_URL" '.schema'
 
+    - name: Build test server binary for CI
+      run: |
+        go build -o test-server-ci ./cmd/server
+        chmod +x test-server-ci
+
     - name: Run Go unit and integration tests (NO_AUTO_ANALYZE=true)
       env:
         NO_AUTO_ANALYZE: "true"
