fix: Add test server binary build to SonarCloud workflow
- Build test-server-ci binary before running tests to fix integration test failures
- This resolves the 'fork/exec ./test-server-ci: no such file or directory' error
- Matches the approach used in the main CI/CD pipeline

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -53,6 +53,11 @@ jobs:
           go mod download
           npm install
 
+      - name: Build test server binary for CI
+        run: |
+          go build -o test-server-ci ./cmd/server
+          chmod +x test-server-ci
+
       - name: Run Go tests with coverage
         env:
           NO_AUTO_ANALYZE: "true"
