--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:ui": "playwright test --ui",
-    "test:e2e:report": "playwright show-report"
+    "test:e2e:report": "playwright show-report",
+    "lint:css": "stylelint \"static/css/**/*.css\""
   },
   "repository": {
     "type": "git",
