--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "declaration-empty-line-before": null,
     "function-name-case": "lower",
     "no-descending-specificity": null,
-    "no-invalid-double-slash-comments": null
+    "no-invalid-double-slash-comments": null,
+    "value-keyword-case": null
   }
 }
