--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "description": "",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.53.1",
     "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
@@ -40,6 +41,8 @@
     "jest-environment-jsdom": "^30.0.0",
     "jsdom": "^26.1.0",
     "newman": "^6.2.0",
+    "stylelint": "^16.21.0",
+    "stylelint-config-standard": "^38.0.0",
     "typescript": "^5.8.3",
     "undici-types": "^7.10.0"
   },
