--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -404,8 +404,19 @@ jobs:
           # Install Lighthouse CI globally for better performance
           npm install -g @lhci/cli
 
+          # Start the server in background for Lighthouse CI
+          ./newsbalancer &
+          SERVER_PID=$!
+          echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
+
+          # Wait for server to be ready
+          timeout 30 bash -c 'until curl -f http://localhost:8080/articles; do sleep 1; done'
+
           # Run Lighthouse CI with our configuration
           lhci autorun
+
+          # Stop the server
+          kill $SERVER_PID || true
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
