fix(ci): Seed database BEFORE starting server and ensure same database path
- Move database seeding before server startup to prevent timing issues
- Set DATABASE_PATH environment variable for both seeding and server
- Ensures server and seeding use the same database file (newsbalancer.db)
- Fixes 'article not found after 3 attempts' errors in accessibility tests
- Server will now start with pre-populated test data instead of empty database

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -437,13 +437,15 @@ jobs:
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
           CI: true
         run: |
-          # Start the server in background
+          # Seed test data directly into database BEFORE starting server
+          echo "Seeding test data for accessibility tests..."
+          export DATABASE_PATH="newsbalancer.db"
+          go run ./cmd/seed_test_data
+
+          # Start the server in background with same database
+          export DATABASE_PATH="newsbalancer.db"
           ./newsbalancer &
           SERVER_PID=$!
-
-          # Seed test data directly into database before starting server
-          echo "Seeding test data for accessibility tests..."
-          go run ./cmd/seed_test_data
 
           # Wait for server to be ready
           timeout 30 bash -c 'until curl -f http://localhost:8080/articles; do sleep 1; done'
