fix(ci): Fix database environment variables and add early failure detection
- Use both DATABASE_PATH and DB_CONNECTION env vars for seeding and server
- Server uses DB_CONNECTION, seeding uses DATABASE_PATH - now both are set
- Add early failure checks in accessibility tests for empty database
- Tests now fail fast with clear error messages if no articles found
- Prevents running accessibility tests on empty pages without content
- Helps debug database seeding issues more effectively

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -440,10 +440,12 @@ jobs:
           # Seed test data directly into database BEFORE starting server
           echo "Seeding test data for accessibility tests..."
           export DATABASE_PATH="newsbalancer.db"
+          export DB_CONNECTION="newsbalancer.db"
           go run ./cmd/seed_test_data
 
           # Start the server in background with same database
           export DATABASE_PATH="newsbalancer.db"
+          export DB_CONNECTION="newsbalancer.db"
           ./newsbalancer &
           SERVER_PID=$!
 
