--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -4,19 +4,19 @@
       "modelName": "meta-llama/llama-4-maverick",
       "perspective": "left",
       "weight": 1.0,
-      "url": "https://openrouter.ai/api/v1/chat/completions"
+      "url": "https://openrouter.ai/api/v1"
     },
     {
       "modelName": "google/gemini-2.0-flash-001",
       "perspective": "center",
       "weight": 1.0,
-      "url": "https://openrouter.ai/api/v1/chat/completions"
+      "url": "https://openrouter.ai/api/v1"
     },
     {
       "modelName": "openai/gpt-4.1-nano",
       "perspective": "right",
       "weight": 1.0,
-      "url": "https://openrouter.ai/api/v1/chat/completions"
+      "url": "https://openrouter.ai/api/v1"
     }
   ],
   "formula": "average",
