ci: add progress indicator tests to automated testing
- Add progress indicator test execution to CI workflow
- Tests run with existing LLM_API_KEY environment variable
- Tests execute after accessibility tests using same server instance
- Provides automated validation of progress indicator functionality

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -459,6 +459,10 @@ jobs:
           # Run accessibility tests
           npx playwright test tests/e2e/accessibility-pages.spec.ts --reporter=dot
 
+          # Run progress indicator tests
+          echo "Running progress indicator tests..."
+          npx playwright test tests/progress-indicator.spec.ts --reporter=dot
+
           # Stop the server
           kill $SERVER_PID || true
 
