--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
         env:
           NO_AUTO_ANALYZE: "true"
           NO_DOCKER: "true"
-          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
         run: |
@@ -204,7 +204,7 @@ jobs:
         env:
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
         run: |
@@ -403,10 +403,10 @@ jobs:
         env:
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN || '' }}
         run: |
           # Install Lighthouse CI globally for better performance
           npm install -g @lhci/cli
@@ -432,7 +432,7 @@ jobs:
         env:
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
           CI: true
@@ -466,12 +466,107 @@ jobs:
           # Stop the server
           kill $SERVER_PID || true
 
+  # E2E tests (run separately for clarity)
+  e2e-tests:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    needs: [frontend-qa]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Build application
+        run: go build -o newsbalancer ./cmd/server
+
+      - name: Run comprehensive E2E tests
+        env:
+          NO_AUTO_ANALYZE: "true"
+          PORT: 8080
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
+          LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
+          LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
+          CI: true
+        run: |
+          # Seed test data
+          echo "Seeding test data for E2E tests..."
+          export DATABASE_PATH="newsbalancer.db"
+          export DB_CONNECTION="newsbalancer.db"
+          
+          # Check if seed command exists
+          if ! go run ./cmd/seed_test_data; then
+            echo "Warning: Failed to seed test data, continuing with empty database"
+          fi
+
+          # Start server
+          ./newsbalancer &
+          SERVER_PID=$!
+          echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
+
+          # Wait for server with timeout
+          echo "Waiting for server to start..."
+          timeout=30
+          while [ $timeout -gt 0 ]; do
+            if curl -f http://localhost:8080/articles > /dev/null 2>&1; then
+              echo "Server is ready!"
+              break
+            fi
+            echo "Waiting for server... ($timeout seconds remaining)"
+            sleep 1
+            timeout=$((timeout-1))
+          done
+
+          if [ $timeout -eq 0 ]; then
+            echo "Server failed to start within 30 seconds"
+            kill $SERVER_PID || true
+            exit 1
+          fi
+
+          # Run all E2E tests (only on Chromium for CI speed)
+          echo "Running all E2E tests..."
+          if npx playwright test tests/e2e/ --project=chromium --reporter=list; then
+            echo "E2E tests passed!"
+          else
+            echo "E2E tests failed!"
+            kill $SERVER_PID || true
+            exit 1
+          fi
+
+          # Stop server
+          kill $SERVER_PID || true
+
+      - name: Upload E2E test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: e2e-test-results
+          path: |
+            test-results/
+            playwright-report/
+
   # Performance benchmarks (on main branch and frontend-rewrite-v3 for testing)
   benchmark:
     name: Performance Benchmarks
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/frontend-rewrite-v3'
-    needs: [integration, docker]
+    needs: [integration, docker, e2e-tests]
 
     steps:
       - name: Checkout code
@@ -495,7 +590,7 @@ jobs:
         env:
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
         run: |
@@ -529,93 +624,22 @@ jobs:
             kill $APP_PID || true
           fi
 
-  # Deploy to staging (only on develop branch)
+  # Deploy to staging (DISABLED - secrets not configured)
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    needs: [integration, security, docker]
-    environment: staging
+    if: false  # Disabled until secrets are properly configured
+    needs: [integration, security, docker, e2e-tests]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.CONTAINER_REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:staging-${{ github.sha }}
-            ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:staging-latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Deploy to staging
-        run: |
-          echo "Deployment to staging would happen here"
-          echo "Image: ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:staging-${{ github.sha }}"
+      - name: Placeholder
+        run: echo "Staging deployment disabled until secrets are configured"
 
   # Deploy to production (DISABLED - not ready for production deployment)
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
     if: false  # Disabled until ready for production deployment
-    needs: [integration, security, docker, benchmark]
-    environment: production
+    needs: [integration, security, docker, benchmark, e2e-tests]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.CONTAINER_REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:v${{ github.run_number }}
-            ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Deploy to production
-        run: |
-          echo "Deployment to production would happen here"
-          echo "Image: ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:v${{ github.run_number }}"
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ github.run_number }}
-          name: Release v${{ github.run_number }}
-          body: |
-            ## Changes in this Release
-            - Automated release from commit ${{ github.sha }}
-            - Docker image: ${{ secrets.CONTAINER_REGISTRY }}/newsbalancer:v${{ github.run_number }}
-
-            ## Deployment
-            This release has been automatically deployed to production.
-          draft: false
-          prerelease: false
+      - name: Placeholder
+        run: echo "Production deployment disabled until ready"
