--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -44,9 +44,9 @@ jobs:
       env:
         NO_AUTO_ANALYZE: "true"
         NO_DOCKER: "true"
-        LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
-        LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
-        LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
+        LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
+        LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
+        LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
       run: |
         go test -v -coverprofile=coverage.out ./...
 
@@ -63,9 +63,9 @@ jobs:
     - name: Run full API/integration test suite (scripts/test.sh all)
       if: runner.os == 'Linux'
       env:
-        LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
-        LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
-        LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
+        LLM_API_KEY: ${{ secrets.LLM_API_KEY || 'test-key' }}
+        LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY || '' }}
+        LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
       run: |
         chmod +x scripts/test.sh
         retries=0
