--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout code
@@ -132,16 +133,14 @@ jobs:
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL || '' }}
         run: |
           echo "Running unit tests with concurrency stress testing..."
-          # Run tests multiple times to catch race conditions
-          echo "Running tests 3 times to catch intermittent issues..."
+          # Run tests 2 times to catch race conditions while maintaining reasonable CI/CD performance
+          echo "Running tests 2 times to catch intermittent issues..."
           go test -v -count=1 -parallel=4 -coverprofile=coverage-1.out -covermode=atomic ./... || exit 1
-          echo "Test run 1/3 completed"
+          echo "Test run 1/2 completed"
           go test -v -count=1 -parallel=4 -coverprofile=coverage-2.out -covermode=atomic ./... || exit 1
-          echo "Test run 2/3 completed"
-          go test -v -count=1 -parallel=4 -coverprofile=coverage-3.out -covermode=atomic ./... || exit 1
-          echo "Test run 3/3 completed"
+          echo "Test run 2/2 completed"
           # Use the last coverage file
-          mv coverage-3.out coverage.out
+          mv coverage-2.out coverage.out
           rm -f coverage-*.out
 
       - name: Upload coverage to Codecov
